# atuin

./: Cargo.toml
crates/atuin/: Cargo.toml
crates/atuin-server/: Cargo.toml
crates/atuin-server-database/src/: lib.rs
crates/atuin-server-postgres/: Cargo.toml
crates/atuin-server-sqlite/: Cargo.toml
crates/atuin-server-sqlite/migrations/: 20241229123456_sqlite_init.sql
crates/atuin-server-sqlite/src/: lib.rs
crates/atuin-server/src/: lib.rs  router.rs  settings.rs
crates/atuin/src/command/: server.rs
crates/atuin/tests/: sync.rs  users.rs
crates/atuin/tests/common/: postgres.rs  sqlite.rs
