[package]
name = "atuin-server-sqlite"
edition = "2021"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

[dependencies]
atuin-common = { path = "../atuin-common", version = "18.4.0" }
atuin-server-database = { path = "../atuin-server-database", version = "18.4.0" }

async-trait = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "time", "uuid"] }
time = { workspace = true }
tracing = { workspace = true }
futures-util = "0.3"
metrics = "0.21.1"
url = { workspace = true }
